--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,15 @@
 			<name>Twitter's Maven Repository</name>
 		</repository>
 	</repositories>
-
+	
+	<pluginRepositories>
+        <pluginRepository>
+            <id>dtrott-public</id>
+            <name>David Trott's Public Repository</name>
+            <url>http://maven.davidtrott.com/repository</url>
+        </pluginRepository>
+    </pluginRepositories>
+    
 	<dependencies>
 
 		<dependency>
@@ -349,8 +357,18 @@
 			<version>2.9.2</version>
 		</dependency>
 		 -->
+		<dependency>
+			<groupId>net.sf.trove4j</groupId>
+			<artifactId>trove4j</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>2.3.0</version>
+		</dependency>
 	</dependencies>
-
+	
 	<build>
 		<finalName>bagheera</finalName>
 		<plugins>
@@ -383,7 +401,30 @@
 					</descriptors>
 				</configuration>
 			</plugin>
-
+			
+			<plugin>
+				<groupId>com.google.protobuf.tools</groupId>
+				<artifactId>maven-protoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>generate-sources</id>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+						<phase>generate-sources</phase>
+						<configuration>
+							<protoSourceRoot>${basedir}/src/main/proto/</protoSourceRoot>
+							<includes>
+								<param>**/*.proto</param>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<protocExecutable>/usr/local/bin/protoc</protocExecutable>
+				</configuration>
+		    </plugin>
+			
 		</plugins>
 
 	</build>
