--- a/conf/kafka.consumer.properties
+++ b/conf/kafka.consumer.properties
@@ -1,12 +1,13 @@
 # kafka consumer properties
 zk.connect=127.0.0.1:2181
 fetch.size=1048576
-
+#serializer.class=com.mozilla.bagheera.serializer.BagheeraDecoder
 # bagheera specific kafka consumer properties
 consumer.threads=2
 
 # output sink properties
 consumer.output.sink=com.mozilla.bagheera.sink.HBaseSink
+sink.hbase.threads=20
 sink.hbase.table=telemetry
 sink.hbase.family=data
 sink.hbase.qualifier=json
