--- a/pom.xml
+++ b/pom.xml
@@ -89,21 +89,16 @@
 
 		<!-- Jackson JSON Processor -->
 		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-core-asl</artifactId>
-			<version>1.9.7</version>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.7</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.0.5</version>
 		</dependency>
 
 		<!-- Netty -->
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty</artifactId>
-			<version>3.5.1.Final</version>
+			<version>3.5.5.Final</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -348,25 +343,33 @@
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-core</artifactId>
-			<version>0.7.0</version>
+			<version>0.7.1-incubating</version>
 		</dependency>
-		<!-- 
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-library</artifactId>
-			<version>2.9.2</version>
+			<version>2.8.0</version>
 		</dependency>
-		 -->
 		<dependency>
-			<groupId>net.sf.trove4j</groupId>
-			<artifactId>trove4j</artifactId>
-			<version>3.0.3</version>
+			<groupId>com.github.sgroschupf</groupId>
+			<artifactId>zkclient</artifactId>
+			<version>0.1</version>
+			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.xerial.snappy</groupId>
+			<artifactId>snappy-java</artifactId>
+			<version>1.0.4.1</version>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<!-- Protocol Buffers -->
 		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		
 	</dependencies>
 	
 	<build>
