--- a/conf/kafka.producer.properties
+++ b/conf/kafka.producer.properties
@@ -1,4 +1,5 @@
-zk.connect=127.0.0.1:2181
+zk.connect=localhost:2181
+broker.list=0:localhost:9092
 serializer.class=com.mozilla.bagheera.serializer.BagheeraEncoder
 producer.type=async
 compression.codec=2
