--- a/pom.xml
+++ b/pom.xml
@@ -421,6 +421,7 @@
 			<plugin>
 				<groupId>com.google.protobuf.tools</groupId>
 				<artifactId>maven-protoc-plugin</artifactId>
+				<version>0.1.10</version>
 				<executions>
 					<execution>
 						<id>generate-sources</id>
