Made a few changes for consumer extension and obsolete ids

--- a/conf/kafka.consumer.properties
+++ b/conf/kafka.consumer.properties
@@ -4,3 +4,6 @@ fetch.size=1048576
 #serializer.class=com.mozilla.bagheera.serializer.BagheeraDecoder
 # bagheera specific kafka consumer properties
 consumer.threads=2
+
+# Uncomment the following to enable MaxMind GeoIP Lookups
+#maxmind.db.path=/usr/local/share/GeoIP/GeoIP.dat
