--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,6 @@
 			<url>http://oss.sonatype.org/content/repositories/releases</url>
 			<name>Sonatype's OSS Maven Repository</name>
 		</repository>
-		<repository>
-			<id>maven.twttr</id>
-			<url>http://maven.twttr.com</url>
-			<name>Twitter's Maven Repository</name>
-		</repository>
 	</repositories>
 	
 	<pluginRepositories>
@@ -369,6 +364,18 @@
 			<version>1.0.4.1</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.1</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.1</version>
+			<scope>runtime</scope>
+		</dependency>
 		
 		<!-- Protocol Buffers -->
 		<dependency>
@@ -376,6 +383,7 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		
 	</dependencies>
 	
 	<build>
