correcting example of maxmind db path property

--- a/conf/bagheera.properties
+++ b/conf/bagheera.properties
@@ -1,7 +1,7 @@
 # General
 max.content.length=1048576
 # Uncomment the following to enable MaxMind GeoIP Lookups
-#general.maxmind.db.path=/usr/local/share/GeoIP/GeoIP.dat
+#maxmind.db.path=/usr/local/share/GeoIP/GeoIP.dat
 
 # Metrics
 metrics.allow.delete.access=true
