--- a/conf/bagheera.metrics.properties
+++ b/conf/bagheera.metrics.properties
@@ -1,10 +1,10 @@
 # Ganglia
-bagheera.metrics.ganglia.enable=true
+bagheera.metrics.ganglia.enable=false
 bagheera.metrics.ganglia.host=239.2.12.79
 bagheera.metrics.ganglia.port=8649
 bagheera.metrics.ganglia.update.secs=15
 # Graphite
 bagheera.metrics.graphite.enable=false
-bagheera.metrics.graphite.host=graphite.example.com
+bagheera.metrics.graphite.host=localhost
 bagheera.metrics.graphite.port=2003
 bagheera.metrics.graphite.update.secs=60
