Fixed thread exception handling and some other minor issues

--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -18,3 +18,14 @@ log4j.appender.DRFA.layout=org.apache.log4j.PatternLayout
 log4j.appender.DRFA.layout.ConversionPattern=%d{ISO8601} %p %c: %m%n
 # Debugging Pattern format
 #log4j.appender.DRFA.layout.ConversionPattern=%d{ISO8601} %-5p %c{2} (%F:%M(%L)) - %m%n
+
+# File for Consumers
+log4j.appender.CONSUMER=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.CONSUMER.File=${bagheera.log.dir}/consumer-${consumer.hash}.log
+log4j.appender.CONSUMER.DatePattern=.yyyy-MM-dd
+log4j.appender.CONSUMER.Append=true
+log4j.appender.CONSUMER.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSUMER.layout.ConversionPattern=%d{ISO8601} %p %c: %m%n
+
+log4j.logger.com.mozilla.bagheera.consumer=INFO, CONSUMER
+log4j.logger.com.mozilla.fhr.consumer=INFO, CONSUMER
