--- a/pom.xml
+++ b/pom.xml
@@ -383,7 +383,13 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>2.4.1</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	
 	<build>
