--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<skip.tests>false</skip.tests>
+		<skip.tests>true</skip.tests>
 	</properties>
 
 	<repositories>
