--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.mozilla</groupId>
 	<artifactId>bagheera</artifactId>
-	<version>0.11-SNAPSHOT</version>
+	<version>0.12-SNAPSHOT</version>
 
 	<name>bagheera</name>
 	<description>REST services for Mozilla Metrics.</description>
@@ -95,12 +95,10 @@
 			<version>3.6.6.Final</version>
 			<scope>compile</scope>
 		</dependency>
-
-		<!-- Cloudera Hadoop, HBase -->
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-core</artifactId>
-			<version>0.20.2-cdh3u4</version>
+			<version>2.0.0-mr1-cdh4.2.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>jasper-runtime</artifactId>
@@ -192,10 +190,15 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-common</artifactId>
+            <version>2.0.0-cdh4.2.0</version>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase</artifactId>
-			<version>0.90.6-cdh3u4</version>
+			<version>0.94.2-cdh4.2.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commons-httpclient</artifactId>
@@ -323,6 +326,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
 
 		<!-- yammer metrics collection -->
 		<dependency>
