--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,17 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.0.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.0.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.0.6</version>
+		</dependency>
+
 
 		<!-- Netty -->
 		<dependency>
