--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.16</version>
 		</dependency>
-
+                <dependency>
+	          <groupId>log4j</groupId>
+	          <artifactId>apache-log4j-extras</artifactId>
+	          <version>1.1</version>
+                </dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
